--- a/home_work_1/index.html
+++ b/home_work_1/index.html
@@ -124,6 +124,7 @@
         .lh-tight {
             line-height: 1.25;
         }
+
     </style>
 
 </head>
@@ -267,7 +268,7 @@
         </header>
 
         <main class="row">
-            <div class="row text-center">
+            <div class="row justify-content-center text-center">
                 <div class="col-4">
                     <div class="card mb-4 rounded-3 shadow-sm">
                         <div class="card-header py-3">
@@ -281,12 +282,77 @@
                                 Email support,
                                 Help center access
                             </p>
-                            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Купить</button>
+                            <button type="button" class="w-100 btn btn-lg btn-success">Купить</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h4 class="my-0 fw-normal">Оставить заявку</h4>
+                        </div>
+                        <div class="card-body">
+                            <form>
+                                <div class="mb-3">
+                                    <input type="text" class="form-control" placeholder="Введите имя">
+                                </div>
+                                <div class="mb-3">
+                                    <input type="email" class="form-control" aria-describedby="emailHelp"
+                                           placeholder="Введите email">
+                                </div>
+                                <button type="button" class="w-100 btn btn-lg btn-outline-success ">Отправить</button>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </main>
+
+        <footer>
+            <div class="col-12">
+                <ul class="nav justify-content-center fixed-bottom sticky-bottom gap-1 mb-2">
+                    <li class="nav-item">
+                        <button type="button" class="w-100 btn btn-lg btn-outline-success "
+                                data-bs-toggle="collapse"
+                                data-bs-target="#collapseExample1" aria-expanded="false"
+                                aria-controls="collapseExample1">
+                            Как купить?
+                        </button>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="w-100 btn btn-lg btn-outline-success "
+                                data-bs-toggle="collapse"
+                                data-bs-target="#collapseExample2" aria-expanded="false"
+                                aria-controls="collapseExample2">
+                            Как доставить?
+                        </button>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="w-100 btn btn-lg btn-outline-success "
+                                data-bs-toggle="collapse"
+                                data-bs-target="#collapseExample3" aria-expanded="false"
+                                aria-controls="collapseExample3">
+                            Какая гарантия?
+                        </button>
+                    </li>
+                </ul>
+                <div class="collapse" id="collapseExample1">
+                    <div class="card card-body sticky-bottom">
+                        Картой))
+                    </div>
+                </div>
+                <div class="collapse" id="collapseExample2">
+                    <div class="card card-body sticky-bottom">
+                        На санях)
+                    </div>
+                </div>
+                <div class="collapse" id="collapseExample3">
+                    <div class="card card-body sticky-bottom">
+                        Никакая)
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     </div>
 
