HomeWork # 1 is completed. Edited. Done.

--- a/home_work_1/index.html
+++ b/home_work_1/index.html
@@ -294,13 +294,13 @@
                         <div class="card-body">
                             <form>
                                 <div class="mb-3">
-                                    <input type="text" class="form-control" placeholder="Введите имя">
+                                    <input name="name" type="text" class="form-control" placeholder="Введите имя">
                                 </div>
                                 <div class="mb-3">
-                                    <input type="email" class="form-control" aria-describedby="emailHelp"
+                                    <input name="email" type="email" class="form-control" aria-describedby="emailHelp"
                                            placeholder="Введите email">
                                 </div>
-                                <button type="button" class="w-100 btn btn-lg btn-outline-success ">Отправить</button>
+                                <button type="submit" class="w-100 btn btn-lg btn-success">Отправить</button>
                             </form>
                         </div>
                     </div>
